--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="/css/style.css" rel="stylesheet" type="text/css">
-    <title>EJERCICIO 1</title>
+    <title>Why Is There a Tiny Pocket Above the Front Pocket on Jeans?</title>
 </head>
 
 <body>
